After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 773525 - file: fix function prototype
file: fix function prototype
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-10-26 10:17 UTC by Monica Baluna
Modified: 2016-10-26 14:54 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
file: fix function prototype (1.46 KB, patch)
2016-10-26 10:17 UTC, Monica Baluna
committed Details | Review

Description Monica Baluna 2016-10-26 10:17:21 UTC
See patch.
Comment 1 Monica Baluna 2016-10-26 10:17:26 UTC
Created attachment 338493 [details] [review]
file: fix function prototype

The name of nautilus_file_is_regular_file had a typo.
Comment 2 Ernestas Kulik 2016-10-26 10:19:06 UTC
Review of attachment 338493 [details] [review]:

Oh, so that was what Clang was complaining about.
Great catch!
Comment 3 Razvan Chitu 2016-10-26 10:46:11 UTC
Attachment 338493 [details] pushed as d782a13 - file: fix function prototype
Comment 4 Carlos Soriano 2016-10-26 11:01:42 UTC
oh, took me more than 2 minutes to realize... now I understand why the warning
Comment 5 Daniel Boles 2016-10-26 14:54:43 UTC
Awesome, I noticed this, glad someone else beat me to it :)