file: fix function prototype

The name of nautilus_file_is_regular_file had a typo.

https://bugzilla.gnome.org/show_bug.cgi?id=773525